# vyry-api

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  MIGRATION_GUIDE.md  README.md  README_DATABASE_MIGRATION.md  docker-compose.dev.yml  docker-compose.yml
apps/api/: Cargo.toml
apps/api/src/: config.rs  extractors.rs  lib.rs  main.rs
apps/api/src/handlers/: auth.rs  conversations.rs  error_handler.rs  friends.rs  health.rs  keys.rs  mod.rs
apps/api/src/middleware/: auth.rs  rate_limit.rs
apps/api/src/websocket/: connection.rs  handler.rs  messages.rs  mod.rs
apps/api/tests/: auth_test.rs  integration_test.rs
crates/application/: Cargo.toml
crates/application/src/: error.rs  lib.rs
crates/application/src/auth/: dtos.rs  mod.rs  use_cases.rs  use_cases_test.rs  validation.rs
crates/application/src/chat/: create_conversation.rs  dtos.rs  list_messages.rs  mod.rs  sync_messages.rs  update_status.rs  use_cases.rs
crates/application/src/friends/: accept_friend.rs  add_friend.rs  dtos.rs  list_friends.rs  list_pending.rs  mod.rs  search_user.rs
crates/application/src/keys/: dtos.rs  use_cases.rs
crates/core/src/entities/: friends.rs  message_deliveries.rs  messages.rs  mod.rs  prelude.rs  users.rs
crates/core/src/signal/: wrapper.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: database.rs  lib.rs  redis.rs
crates/infrastructure/src/crypto/: signal.rs
crates/infrastructure/src/repositories/: mod.rs  postgres.rs  traits.rs
crates/infrastructure/tests/: crypto_test.rs
crates/p2p/: Cargo.toml
crates/p2p/src/: lib.rs
crates/p2p/tests/: p2p_transfer_test.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20251201000001_create_users.rs  m20251201000002_create_devices.rs  m20251201000003_create_one_time_prekeys.rs  m20251201000004_create_signal_sessions.rs  m20251201000005_create_conversations.rs  m20251201000006_create_conv_members.rs  m20251201000007_create_messages.rs  m20251201000008_create_message_deliveries.rs  m20251201000009_create_push_tokens.rs  m20251202000010_create_otp_verifications.rs  m20251205_add_client_message_id_to_messages.rs  m20251205_alter_message_deliveries.rs  m20251207000004_add_background_image_to_users.rs  m20260201_093729_create_friends.rs
openspec/: IMPROVEMENTS.md  MULTI_DATABASE_ARCHITECTURE.md  project.md
openspec/changes/add-friend-management-system/: proposal.md  tasks.md
openspec/changes/add-friend-management-system/specs/friend-management/: spec.md
openspec/specs/auth/: spec.md
openspec/specs/chat/: spec.md
openspec/specs/conversations/: spec.md
openspec/specs/delivery-status/: spec.md
openspec/specs/group-chat/: spec.md
openspec/specs/health/: spec.md
openspec/specs/keys/: spec.md
openspec/specs/push-notifications/: spec.md
openspec/specs/typing-indicators/: spec.md
openspec/specs/webrtc/: spec.md
openspec/specs/websocket/: spec.md
