[workspace]
members = [
    "apps/api",
    "crates/core",
    "crates/domain",
    "crates/application",
    "crates/infrastructure",
    "crates/interfaces",
    "migration",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[workspace.dependencies]
actix-web = "4.9"
actix-ws = "0.3"
tokio = { version = "1.40", features = ["full"] }
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid", "with-json"] }
sea-orm-migration = "1.1"
redis = { version = "0.27", features = ["tokio-comp", "json"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
rand = "0.8"
sha2 = "0.10"
hkdf = "0.12"
aes-gcm = "0.10"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
argon2 = "0.5"
jsonwebtoken = "9.3"
