[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
actix-web.workspace = true
actix-ws.workspace = true
actix-cors = "0.7"
tokio.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
redis.workspace = true
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
rand.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
argon2.workspace = true
jsonwebtoken.workspace = true
futures = "0.3"
bytes = "1.8"
governor.workspace = true
nonzero_ext.workspace = true
tracing-actix-web.workspace = true

core = { path = "../../crates/core" }
domain = { path = "../../crates/domain" }
application = { path = "../../crates/application" }
infrastructure = { path = "../../crates/infrastructure" }
interfaces = { path = "../../crates/interfaces" }
dashmap = "6.1.0"
rmp-serde.workspace = true
