[package]
name = "application"
version.workspace = true
edition.workspace = true

[dependencies]
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
sea-orm.workspace = true
redis.workspace = true
jsonwebtoken.workspace = true
rand.workspace = true
argon2.workspace = true
sha2.workspace = true
base64 = "0.22"
infrastructure = { path = "../infrastructure" }
core = { path = "../core" }
domain = { path = "../domain" }

