[package]
name = "application"
version.workspace = true
edition.workspace = true

[dependencies]
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
validator.workspace = true
tracing.workspace = true
sea-orm.workspace = true
redis.workspace = true
jsonwebtoken.workspace = true
rand.workspace = true
argon2.workspace = true
sha2.workspace = true
base64 = "0.22"
once_cell = "1.20"
regex = "1.11"
infrastructure = { path = "../infrastructure" }
vyry_core = { path = "../core", package = "core" }
domain = { path = "../domain" }

