[package]
name = "infrastructure"
version.workspace = true
edition.workspace = true

[dependencies]
sea-orm.workspace = true
redis.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
rand.workspace = true
uuid.workspace = true
async-trait = "0.1"
core = { path = "../core" }