[package]
name = "p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
webrtc = "0.10"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
tracing = "0.1"
futures = "0.3"
bytes = "1.0"

[dev-dependencies]
tracing-subscriber = "0.3"
